--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://isharab.github.io/portfolio", 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,12 +15,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
